--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "jetifier": "^1.6.5",
     "jssoup": "0.0.10",
     "react": "16.9.0",
     "react-native": "0.61.5",
