--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
-    "jetifier": "^1.6.5",
     "jssoup": "0.0.10",
-    "ms": "^2.1.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
@@ -23,8 +21,7 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
-    "react-navigation-tabs": "^2.7.0",
-    "typescript": "^3.7.5"
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
