--- a/ios/DailyKin.xcodeproj/xcshareddata/xcschemes/DailyKin.xcscheme
+++ b/ios/DailyKin.xcodeproj/xcshareddata/xcschemes/DailyKin.xcscheme
@@ -29,8 +29,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "DailyKin.app"
-               BlueprintName = "DailyKin"
+               BuildableName = "Daily Kin.app"
+               BlueprintName = "Daily Kin"
                ReferencedContainer = "container:DailyKin.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -59,8 +59,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DailyKin.app"
-            BlueprintName = "DailyKin"
+            BuildableName = "Daily Kin.app"
+            BlueprintName = "Daily Kin"
             ReferencedContainer = "container:DailyKin.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -92,8 +92,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DailyKin.app"
-            BlueprintName = "DailyKin"
+            BuildableName = "Daily Kin.app"
+            BlueprintName = "Daily Kin"
             ReferencedContainer = "container:DailyKin.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -109,8 +109,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "DailyKin.app"
-            BlueprintName = "DailyKin"
+            BuildableName = "Daily Kin.app"
+            BlueprintName = "Daily Kin"
             ReferencedContainer = "container:DailyKin.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -120,6 +120,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Daily"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
